--- a/views/public/html/edit-c-bank.html
+++ b/views/public/html/edit-c-bank.html
@@ -638,44 +638,44 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="bank_name" class="form-label">Bank Name</label>
-                                    <input name="bank_name" type="text" id="bank_name" class="form-control" required/>
+                                    <input name="bank_name" type="text" id="bank_name" class="form-control" />
                                 </div>
                                 <div class="col-md-6">
                                     <label for="account_num" class="form-label">Account number</label>
-                                    <input name="account_num" type="text" id="account_num" class="form-control" required/>
+                                    <input name="account_num" type="text" id="account_num" class="form-control" />
                                 </div>
                             </div>
                 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="bank_addr" class="form-label">Bank Address</label>
-                                    <input name="bank_addr" type="text" id="bank_addr" class="form-control" required/>
+                                    <input name="bank_addr" type="text" id="bank_addr" class="form-control" />
                                 </div>
                                 <div class="col-md-6">
                                     <label for="ifsc_code" class="form-label">IFSC code</label>
-                                    <input name="ifsc_code" type="text" id="ifsc_code" class="form-control" required/>
+                                    <input name="ifsc_code" type="text" id="ifsc_code" class="form-control" />
                                 </div>
                             </div>
                 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="swift_code" class="form-label">Swift code</label>
-                                    <input name="swift_code" type="text" id="swift_code" class="form-control" required/>
+                                    <input name="swift_code" type="text" id="swift_code" class="form-control" />
                                 </div>
                                 <div class="col-md-6">
                                     <label for="beneficiary" class="form-label">Benificiary</label>
-                                    <input name="beneficiary" type="text" id="beneficiary" class="form-control" required/>
+                                    <input name="beneficiary" type="text" id="beneficiary" class="form-control" />
                                 </div>
                             </div>
                 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <label for="beneficiary_addr" class="form-label">Address</label>
-                                    <input name="beneficiary_addr" type="text" id="beneficiary_addr" class="form-control" required/>
+                                    <input name="beneficiary_addr" type="text" id="beneficiary_addr" class="form-control" />
                                 </div>
                                 <div class="col-md-6">
                                     <label for="pan_num" class="form-label">Pan number</label>
-                                    <input name="pan_num" type="text" id="pan_num" class="form-control" required/>
+                                    <input name="pan_num" type="text" id="pan_num" class="form-control" />
                                 </div>
                             </div>
                 
@@ -687,7 +687,7 @@
                                     <input name="doc" disabled type="" id="prevPass" class="form-control"/>
                                       </div>
                                     <label for="passbook" class="form-label">Passbook</label>
-                                    <input name="passbook" type="file" id="passbook" class="form-control" required/>
+                                    <input name="passbook" type="file" id="passbook" class="form-control" />
                                 </div>
                                 <div class="col-md-6">
                                   <div class="card card-body border border-2 mb-2">
@@ -696,7 +696,7 @@
                                     <input name="doc1" disabled type="" id="prevPan" class="form-control"/>
                                       </div>
                                     <label for="pan_card" class="form-label">Pan Card</label>
-                                    <input name="pan_card" type="file" id="pan_card" class="form-control" required/>
+                                    <input name="pan_card" type="file" id="pan_card" class="form-control" />
                                 </div>
                             </div>
                             
@@ -704,7 +704,7 @@
                               <div class="col-md-6">
                                 
                                   <label for="branch" class="form-label">Branch</label>
-                                  <input name="branch" type="text" id="branch" class="form-control" required/>
+                                  <input name="branch" type="text" id="branch" class="form-control" />
                               </div>
                               <div class="col-md-6">
                                 <label for="types">Select Type</label>
@@ -718,7 +718,7 @@
                           <div class="row mb-3">
                             <div class="col-md-6">
                               <!-- <label for="created_by" class="form-label">Created By</label> -->
-                                  <input name="created_by" type="hidden" id="created_by" class="form-control" required/>
+                                  <input name="created_by" type="hidden" id="created_by" class="form-control" />
                             </div>
                           </div>
                 
