--- a/views/public/html/edit-c-contract.html
+++ b/views/public/html/edit-c-contract.html
@@ -633,7 +633,7 @@
                                   <div class="col-md-6">
                                       <div class="form-floating">
                                         <input type="hidden" id="contractId">
-                                          <select id="editcontract_rank" class="form-select" required>
+                                          <select id="editcontract_rank" class="form-select" >
                                               <option value="" disabled selected>-- Select Rank --</option>
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
@@ -642,7 +642,7 @@
                                   </div>
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <select id="editcontract_company" class="form-select" required>
+                                          <select id="editcontract_company" class="form-select" >
                                               <option value="" disabled selected>-- Select Company --</option>
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
@@ -654,7 +654,7 @@
                               <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <select id="editcontract_vsl" class="form-select" required>
+                                          <select id="editcontract_vsl" class="form-select" >
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
                                           <label for="editcontract_vsl" class="form-label">Select Vessel</label>
@@ -662,7 +662,7 @@
                                   </div>
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <select id="editcontract_vesseltype" class="form-select" required>
+                                          <select id="editcontract_vesseltype" class="form-select" >
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
                                           <label for="editcontract_vesseltype" class="form-label">Select Vessel Type</label>
@@ -673,7 +673,7 @@
                               <div class="row mb-3">
                                   <div class="col-md-6">
                                       <div class="form-floating">
-                                          <select id="editcontract_signonport" class="form-select" required>
+                                          <select id="editcontract_signonport" class="form-select" >
                                               <!-- Options will be dynamically added using JavaScript -->
                                           </select>
                                           <label for="editcontract_signonport" class="form-label">Sign on Port</label>
