--- a/views/public/html/edit-c-medicals.html
+++ b/views/public/html/edit-c-medicals.html
@@ -629,7 +629,7 @@
                         <div class="mb-3">
                             <input id="med_id" type="hidden">
                             <label for="hospital_name" class="form-label">Hospital Name</label>
-                            <select id="hospital_name" class="form-select" required>
+                            <select id="hospital_name" class="form-select" >
                                 <!-- Options will be dynamically added using JavaScript -->
                             </select>
                         </div>
