--- a/views/public/html/edit-c-nkd.html
+++ b/views/public/html/edit-c-nkd.html
@@ -629,12 +629,12 @@
                           <div class="mb-3">
                               <input type="hidden" id="nkd_id">
                               <label for="nkd_kin_name" class="form-label">Kin Name</label>
-                              <input name="kinname" type="text" id="nkd_kin_name" class="form-control" required>
+                              <input name="kinname" type="text" id="nkd_kin_name" class="form-control" >
                           </div>
           
                           <div class="mb-3">
                               <label for="nkd_kin_relationship" class="form-label">Kin Relationship</label>
-                              <select name="relation" id="nkd_kin_relationship" class="form-select" required>
+                              <select name="relation" id="nkd_kin_relationship" class="form-select" >
                                   <option value="FATHER">FATHER</option>
                                   <option value="MOTHER">MOTHER</option>
                                   <option value="SON">SON</option>
@@ -654,17 +654,17 @@
           
                           <div class="mb-3">
                               <label for="nkd_kin_contact" class="form-label">Kin Contact Number</label>
-                              <input name="contact" type="text" id="nkd_kin_contact" class="form-control" required>
+                              <input name="contact" type="text" id="nkd_kin_contact" class="form-control" >
                           </div>
           
                           <div class="mb-3">
                               <label for="nkd_contact_address" class="form-label">Kin Contact Address</label>
-                              <input name="addr" type="text" id="nkd_contact_address" class="form-control" required>
+                              <input name="addr" type="text" id="nkd_contact_address" class="form-control" >
                           </div>
           
                           <div class="mb-3">
                               <label for="nkd_priority" class="form-label">Priority:</label>
-                              <select class="form-select" id="nkd_priority" name="priority" required>
+                              <select class="form-select" id="nkd_priority" name="priority" >
                                   <option value="HIGH">High</option>
                                   <option value="LOW">Low</option>
                                   <option value="MID">Mid</option>
