--- a/views/public/html/edit-c-travel.html
+++ b/views/public/html/edit-c-travel.html
@@ -629,22 +629,22 @@
                           <form id="travelForm">
                               <div class="mb-3">
                                   <label for="travel_date" class="form-label">Travel Date</label>
-                                  <input name="date" type="date" id="travel_date" class="form-control" required>
+                                  <input name="date" type="date" id="travel_date" class="form-control" >
                               </div>
           
                               <div class="mb-3">
                                   <label for="travel_from" class="form-label">Travel From</label>
-                                  <input name="from" type="text" id="travel_from" class="form-control" required>
+                                  <input name="from" type="text" id="travel_from" class="form-control" >
                               </div>
           
                               <div class="mb-3">
                                   <label for="travel_to" class="form-label">Travel To</label>
-                                  <input name="to" type="text" id="travel_to" class="form-control" required>
+                                  <input name="to" type="text" id="travel_to" class="form-control" >
                               </div>
           
                               <div class="mb-3">
                                   <label for="travel_mode" class="form-label">Travel Mode:</label>
-                                  <select name="mode" id="travel_mode" class="form-select" required>
+                                  <select name="mode" id="travel_mode" class="form-select" >
                                       <option value="bus">Bus</option>
                                       <option value="train">Train</option>
                                       <option value="air">Air</option>
@@ -654,7 +654,7 @@
           
                               <div class="mb-3">
                                   <label for="travel_status" class="form-label">Travel Status:</label>
-                                  <select name="status" id="travel_status" class="form-select" required>
+                                  <select name="status" id="travel_status" class="form-select" >
                                       <option value="booked">Booked</option>
                                       <option value="cancelled">Cancelled</option>
                                       <option value="travelling">Travelling</option>
@@ -674,7 +674,7 @@
           
                               <div class="mb-3">
                                   <label for="travel_port_agent" class="form-label">Port Agent</label>
-                                  <select id="travel_port_agent" class="form-select" required>
+                                  <select id="travel_port_agent" class="form-select" >
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
                               </div>
