--- a/views/public/html/edit-cDocuments.html
+++ b/views/public/html/edit-cDocuments.html
@@ -360,27 +360,27 @@
                         <div class="">
                            <div class="mb-3">
                                 <label for="documents">Document:</label>
-                                <input type="text" class="form-control" id="documents" name="document" required>
+                                <input type="text" class="form-control" id="documents" name="document" >
                             </div>
                             <div class="mb-3">
                                 <label for="document_number">Document Number:</label>
-                                <input type="text" class="form-control" id="document_number" name="document_number" required>
+                                <input type="text" class="form-control" id="document_number" name="document_number" >
                             </div>
                             <div class="mb-3">
                                 <label for="issue_date">Issue Date:</label>
-                                <input type="date" class="form-control" id="issue_date" name="issue_date" required>
+                                <input type="date" class="form-control" id="issue_date" name="issue_date" >
                             </div>
                             <div class="mb-3">
                                 <label for="issue_place">Issue Place:</label>
-                                <input type="text" class="form-control" id="issue_place" name="issue_place" required>
+                                <input type="text" class="form-control" id="issue_place" name="issue_place" >
                             </div>
                             <div class="mb-3">
                                 <label for="document_files">Document Files:</label>
-                                <input type="text" class="form-control" id="document_files" name="document_files" required>
+                                <input type="text" class="form-control" id="document_files" name="document_files" >
                             </div>
                             <div class="mb-3">
                               <label for="stcw">STCW:</label>
-                              <select class="form-control" id="stcw" name="stcw" required>
+                              <select class="form-control" id="stcw" name="stcw" >
                                   <option value="Yes">Yes</option>
                                   <option value="No">No</option>
                               </select>
