--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -644,7 +644,7 @@
                                         id="edit_candidate_fname"
                                         placeholder="John Doe"
                                         aria-describedby="firstNameHelp"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_fname">First Name</label>
                                 </div>
@@ -658,7 +658,7 @@
                                         id="edit_candidate_lname"
                                         placeholder="Doe"
                                         aria-describedby="lastNameHelp"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_lnmae">Last Name</label>
                                 </div>
@@ -980,7 +980,7 @@
                     <div class="card-body pb-0 pt-4 ">
                       <div class="col-md-12">
                              <div class="form-floating">
-                                 <select id="edit_candidate_us_visa" class="form-select" required>
+                                 <select id="edit_candidate_us_visa" class="form-select" >
                                      <option value="" disabled selected>-- Select Option --</option>
                                      <option value="1">Yes</option>
                                      <option value="0">No</option>
