--- a/views/public/html/edit-document-2.html
+++ b/views/public/html/edit-document-2.html
@@ -603,7 +603,7 @@
                                   <div class="col-md-6 mb-3">
                                       <label for="u_document_type_name" class="form-label">Document Name</label>
                                       <input type="hidden" id="u_document_type_id">
-                                      <input type="text" class="form-control" id="u_document_type_name" required>
+                                      <input type="text" class="form-control" id="u_document_type_name" >
                                   </div>
                                   <div class="col mt-4 pt-3">
                                       <div class="form-check">
