--- a/views/public/html/edit-experience-2.html
+++ b/views/public/html/edit-experience-2.html
@@ -613,7 +613,7 @@
                             <div class="col mx-auto ">
                                 <label for="u_experience_name" class="form-label">Experience</label>
                                 <input type="hidden" id="u_experience_id">
-                                <input type="text" class="form-control" id="u_experience_name" required>
+                                <input type="text" class="form-control" id="u_experience_name" >
                             </div>
                         </div>
                         <div class="card-footer text-end pb-0 pe-0 pt-3">
