--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1011,6 +1011,8 @@
                                                             <th scope="col"  >Document&nbsp;Number</th>
                                                             <th scope="col"  >Issue&nbsp;Date</th>
                                                             <th scope="col"  >Issue&nbsp;Place</th>
+                                                            <th scope="col"  >Document Name</th>
+
                                                             <th scope="col"  >View&nbsp;Documents</th>
                                                             <th scope="col"  >STCW</th>
                                                             <th scope="col"  >Expiry&nbsp;Date</th>
@@ -1210,7 +1212,7 @@
                                                               <th scope="col">Vessel</th>
                                                               <th scope="col">Type</th>
                                                               <th scope="col">DWT</th>
-                                                              <th scope="col">&nbsp;&nbsp;&nbsp;From&nbsp;&nbsp;&nbsp;</th>
+                                                              <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                                               <th scope="col">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                                                               <th scope="col">Total&nbsp;MMDD</th>
                                                               <th scope="col">Reason&nbsp;for&nbsp;Sign&nbsp;Off</th>
