--- a/views/public/html/add-vesseltype.html
+++ b/views/public/html/add-vesseltype.html
@@ -634,11 +634,14 @@
                           </div>
                       </div>
                       <div class="mb-3 row">
-                          <label for="vsl_company" class="col-md-2 col-form-label">Company:</label>
-                          <div class="col-md-10">
-                              <input type="text" class="form-control" id="vsl_company" placeholder="Enter company" required>
-                          </div>
-                      </div>
+                        <label for="vsl_company" class="col-md-2 col-form-label">Company:</label>
+                        <div class="col-md-10">
+                            <select class="form-select" id="vsl_company" required>
+                                <option value="" selected disabled>Select company</option>
+                            </select>
+                        </div>
+                    </div>
+                    
                       <div class="mb-3 row">
                           <label for="imo_number" class="col-md-2 col-form-label">IMO Number:</label>
                           <div class="col-md-10">
