--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -958,6 +958,7 @@
                                                           <th scope="col" >AOA&nbsp;Number</th>
                                                           <th scope="col"  >Emigrate&nbsp;Number</th>
                                                           <th scope="col" >Document</th>
+                                                          <th scope="col" >Document</th>
                                                           <th scope="col">AOA</th>
                                                           <th scope="col">AOA</th>
                                                           <th scope="col">Duration&nbsp;of&nbsp;Contract</th>
