--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -962,6 +962,7 @@
                                                           <th scope="col">AOA</th>
                                                           <th scope="col">AOA</th>
                                                           <th scope="col">Duration&nbsp;of&nbsp;Contract</th>
+                                                          <th scope="col">Period&nbsp;Onboard</th>
                                                           <th scope="col" >Actions</th>
                                                       </tr>
                                                   </thead>
